finally got hamburger menu to work, other style changes such as footer email colour change, slight margin fixes, aligning text to start, etc.

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,9 @@ body {
   background: var(--white-bg-bg);
   color: var(--dark-bg-text);
   margin: 0 35px;
+  overflow-x: hidden;
 }
+
 
 /* header, section{
   scroll-snap-align: start;
@@ -182,51 +184,92 @@ header {
   padding-top: 30px;
 }
 
-
-nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.menu-container {
   position: relative;
-  background: var(--white-bg-bg);
-  height: 64px;
-  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  padding: 20px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+  box-sizing: border-box;
 }
 
-/* Jolyssa */
-nav h1 {
-  justify-self: flex-start;
-  align-self: flex-start;
-  display: inline;
+.menu-container a {
+  text-decoration: none;
+  color: var(--white-bg-text);
+  transition: color 0.3s ease;
 }
 
-nav ul,
-nav li {
-  /* margin: 0 auto; */
-  padding: 0;
+.menu-container a:hover {
+  color: var(--white-bg-primary);
+}
+
+.menu-container input {
+  display: block;
+  width: 35px;
+  height: 25px;
+  margin: 0;
+  position: absolute;
+  cursor: pointer;
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  -webkit-touch-callout: none;
+}
+
+/* Burger menu */
+.menu-container span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: var(--white-bg-primary);
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+.menu-container span:first-child {
+  transform-origin: 0% 0%;
+}
+
+.menu-container span:nth-child(3) {
+  transform-origin: 0% 100%;
+}
+
+.menu-container input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(3px,-1px);
+}
+
+.menu-container input:checked ~ span:nth-child(4) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+.menu-container input:checked ~ span:nth-child(3) {
+  transform: rotate(-45deg) translate(-5px,11px);
+}
+
+.logo {
+  font-weight: 700;
+  font-size: var(--h1);
+}
+
+.menu ul {
   list-style: none;
 }
 
-nav ul {
-  text-align: center;
-  flex-grow: 1;
+.menu li {
+  padding: 10px 0;
+  font-size: 22px;
 }
 
-nav li {
-  display: inline-block;
-}
-
-nav a {
-  display: block;
-  line-height: 64px;
-  padding: 0 14px;
-  font-size: var(--p);
-}
-
-nav li a:hover {
-  color: #7FC3EB;
-  background: #E6E6F0;
-}
 
 /* Home */
 .home .card img:hover {
@@ -241,7 +284,7 @@ nav li a:hover {
 .about .card p {
   padding: 20px 0;
   width: clamp(45ch, 30%, 75ch);
-  text-align: center;
+  text-align: left;
   margin: 0 auto;
 }
 
@@ -296,6 +339,9 @@ nav li a:hover {
   padding: 0 15px 60px 0;
 }
 
+.projects .card p {
+  text-align: left;
+}
 .projects p:first-of-type {
   padding-bottom: 15px;
 }
@@ -316,7 +362,7 @@ nav li a:hover {
 
 .blog .card p {
   width: clamp(45ch, 80%, 75ch);
-  text-align: center;
+  text-align: left;
   margin: 0 auto;
 }
 
@@ -353,7 +399,6 @@ nav li a:hover {
 .contact-form h2 {
   margin-bottom: 1rem;
   text-align: center;
-  color: #181728;
 }
 
 .form-group {
@@ -424,7 +469,51 @@ textarea {
 /* ADDITIONAL STYLES
 /*******************************************/
 
-/* Extra small devices (phones, 600px and down) */
+/******* General styles for all mobile styles *******/
+@media only screen and (max-width: 767px) { 
+  body{
+    margin: 0;
+  }
+
+  .card {
+    margin: 0 25px;
+  }
+
+  .menu-container {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  
+  .menu {
+    position: absolute;
+    box-sizing: border-box;
+    width: 300px;
+    right: -300px;
+    top: 0;
+    margin: -20px;
+    padding: 75px 50px 50px;
+    background: var(--white-bg-bg);
+    border: 3px solid #bbd8f8;
+    border-radius: 5px;
+    -webkit-font-smoothing: antialiased;
+    /* to stop flickering of text in safari */
+    transform-origin: 0% 0%;
+    transform: translateX(0%);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .menu-container input:checked ~ .menu {
+    transform: translateX(-100%);
+  }
+}
+
+
+
+/****** Extra small devices (phones, 600px and down) ******/
 @media only screen and (max-width: 600px) {
 
   /* General Styles */
@@ -434,7 +523,12 @@ textarea {
 
   .card {
     padding: 20px 20px 40px 20px;
+  }
 
+  /* Nav, changing the width */
+  .menu {
+    width: 340px;
+    right: -340px;
   }
 
   /* Align clamped text to width of screen */
@@ -447,7 +541,7 @@ textarea {
 
   /* Switch centred text to left */
   .projects p,
-  .blog .card p {
+  .blog .card p, .about .card p {
     text-align: start;
   }
 
@@ -506,8 +600,8 @@ textarea {
 
   /* Footer */
   .footer img {
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
   }
 }
 
@@ -522,8 +616,40 @@ textarea {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-  ...
+  .menu-container {
+    width: 100%;
+  }
+
+  .menu-container a {
+    color: var(--white-bg-text);
+  }
+
+  .menu-container input {
+    display: none;
+  }
+
+  /* Burger menu */
+  .menu-container span {
+    display: none;
+  }
+
+  .menu {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .menu ul {
+    display: flex;
+    padding: 0;
+  }
+
+  .menu li {
+    padding: 0 20px;
+  }
 }
+
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
